ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
    config \
    jdepends \
    tomcat-extensions \
    interop \
    diagnostics \
    platform \
    idm \
    commons \
    samlauthority \
    ssolib \
    websso \
    admin-interfaces \
    wstauthz \
    sts \
    wsTrustClient \
    install \
    rest \
    openidconnect
