ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
    config \
    jdepends \
    tomcat-extensions \
    ROOT \
    interop \
    diagnostics \
    platform \
    idm \
    commons \
    samlauthority \
    ssolib \
    websso \
	lightwaveui \
    sts \
    wsTrustClient \
    install \
    rest \
    openidconnect \
    sso-config
