lwraftconf_DATA = \
    postschema.ldif \
    post.reg        \
    post-client.reg \
    postd-syslog-ng.conf \
    saslpostd.conf \
    post-rest.json \
    post-telegraf.conf \
    post-demote-deads.sh \
    refresh-resolve-conf.sh \
    monitor-core-dump.sh

bin_SCRIPTS = \
    post_aws_restore_common.sh \
    post_restore.sh
